--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 
+.env
 # testing
 /coverage
 
@@ -21,9 +22,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Backend dependencies
-backend/node_modules/
-
-# Environment variables
-backend/.env
